# tinycheck

./: CMakeLists.txt  README.md  logging.cpp  main.cpp
examples/: run.sh  xor.dimacs
include/: logging.hpp  parser.hpp  tinycheck.hpp
